<?xml version="1.0" encoding="utf-8"?>
<!--
/*******************************************************************************
 * Copyright 2013 Gabriele Mariotti
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *******************************************************************************/
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/pref_display" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_battery_charge"
            android:summary="@string/pref_chargeSummary"
            android:title="@string/pref_charge" >
        </CheckBoxPreference>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_battery_temp"
            android:summary="@string/pref_tempSummary"
            android:title="@string/pref_temp" >
        </CheckBoxPreference>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_battery_voltage"
            android:summary="@string/pref_voltageSummary"
            android:title="@string/pref_voltage" >
        </CheckBoxPreference>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_battery_health"
            android:summary="@string/pref_healthSummary"
            android:title="@string/pref_health" >
        </CheckBoxPreference>
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/pref_update" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_battery_realtime"
            android:summary="@string/pref_realtimeSummary"
            android:title="@string/pref_realtime" >
        </CheckBoxPreference>
    </PreferenceCategory>

</PreferenceScreen>